valid_tests/arrays/test6.go
// Test: Simple array assignment
func main() {
    var numbers []int
    numbers[0] = 1
}
