invalid_tests/declarations/test1.go
// Test 1: Constant without value
func main() {
    const x int
}
